# AI-Agent-PM

./: .gitignore  AI_AGENT_PM_HANDOFF.md  CONTINUE_PROMPT.md  README.md
.cursor/rules/: mock-api-openapi-sync.mdc
PMP_AI_Agent/: .gitignore  README.md  pyproject.toml
PMP_AI_Agent/docs/: STRUCTURE.md
PMP_AI_Agent/src/pmp_ai_agent/: __init__.py  facade.py  registry.py
PMP_AI_Agent/tests/: conftest.py  test_facade.py
PMP_Doc/01-项目管理/: PM-001_开发阶段规划书_v1.0.md
PMP_Doc/02-需求规格/: REQ-001_产品需求规格说明书_v1.0_完整版.md  REQ-001_产品需求规格说明书_v1.0_完整版_第 2 部分.md  REQ-001_产品需求规格说明书_v1.0_完整版_第 3 部分.md  REQ-002_V1需求确认与迭代执行版.md
PMP_Doc/03-系统设计/: API-001_接口设计文档_v1.0.md  API-001_接口设计文档_v1.0_完整版.md  ARCH-001_系统架构设计书_v1.0.md  ARCH-001_系统架构设计书_v1.0_完整版.md  ARCH-002_详细设计说明书_v1.0_完整版.md  (+1 more)
PMP_Req_V2/: README.md  REQ-MASTER_完整需求总文档.md
PMP_Service/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
PMP_Service/alembic/: env.py  script.py.mako
PMP_Service/docs/: STRUCTURE.md
PMP_Service/scripts/: export_openapi.py
PMP_Service/src/pmp_service/: main.py
PMP_Service/src/pmp_service/core/: config.py  db.py
PMP_Service/src/pmp_service/core/structured_import/: __init__.py
PMP_Service/src/pmp_service/features/ai_gateway/: capabilities.py  router.py  service.py
PMP_Service/src/pmp_service/schemas/: __init__.py
PMP_Service/tests/: conftest.py  test_ai_invoke.py  test_health.py
PMP_Web/: .env.development  .env.example  .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
contracts/: README.md
(+137 files in other folders)
