[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pmp-ai-agent"
version = "0.1.0"
description = "PMP AI 能力包：按 capability 分发；仅被 PMP_Service 以包方式 import（见 TECH-001/003）。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]
