[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pmp-service"
version = "0.1.0"
description = "PMP 业务 API（FastAPI）；AI 仅经 ai_gateway import pmp_ai_agent。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["httpx>=0.26", "pytest>=7.4", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["src"]
